k8s/2-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-database
  namespace: zebrands
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database-mongo
          image: mongo:3.6
          volumeMounts:
            - mountPath: "/data/db"
              name: vol-mongo
          ports:
            - containerPort: 27017
      volumes:
        - name: vol-mongo
          persistentVolumeClaim:
            claimName: vol-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: svc-database
  namespace: zebrands
  labels:
    app: database
spec:
  clusterIP: None
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
