k8s/3-api-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-api
  namespace: zebrands
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-rest
          image: mt2h/api-retozebrands:latest
          #image: retozebrands #local image testing
          #imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-api
  namespace: zebrands
  labels:
    app: api
spec:
  #type: NodePort
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
